--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,42 @@
     tools:context=".Activity.MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:id="@+id/goToMap"
+        android:layout_width="152dp"
+        android:layout_height="56dp"
         android:layout_marginBottom="4dp"
+        android:onClick="goToMap"
+        android:rotationX="0"
+        android:text="go to map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="152dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="52dp"
         android:onClick="goToShoppingLists"
         android:rotationX="0"
         android:text="@string/main_activity_choose_lists"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.996"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/shopList"
+        android:layout_width="152dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="52dp"
+        android:onClick="goToShopsList"
+        android:rotationX="0"
+        android:text="go to shops"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.009"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
